--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@ TABLE OF CONTENTS
 */
 
 /* 1. Basics, layout */
+body {
+  padding: 0px;
+  margin: 0px;
+}
+
 .clear {
   clear: both;
 }
@@ -26,9 +31,22 @@ TABLE OF CONTENTS
   object-fit: cover;
 }
 
-body {
-  padding: 0px;
-  margin: 0px;
+.left {
+  position: relative;
+  float: left;
+  /*margin: 10px 10px 10px 0px;*/
+  margin: 10px 0px;
+}
+
+.right {
+  position: relative;
+  float: right;
+  /*margin: 10px 0px 10px 10px;*/
+  margin: 10px 0px;
+}
+
+.left-offset {
+  left: 230px;
 }
 
 /* Imported fonts */
@@ -49,7 +67,7 @@ body {
   padding: 10px 0px;
   position: fixed;
   background: #8a7595;
-  z-index: 100;
+  z-index: 10;
 }
 
 #logo {
@@ -76,10 +94,11 @@ body {
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 5px;
 
+  font-family: inherit;
+  font-size: inherit;
 }
 
 #search-button {
-  /* COLOR/TYPOGRAPHY CHANGES NEEDED */
   display: inline-block;
   position: relative;
   margin: 0px 5px 0px 0px;
@@ -98,6 +117,9 @@ body {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
+
+  font-family: inherit;
+  font-size: inherit;
 }
 
 #search-button:hover {
@@ -107,6 +129,23 @@ body {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
+}
+
+#account-info {
+  display: inline-block;
+  position: absolute;
+  /*float: right;*/
+  right: 0px;
+  margin-right: 10px;
+  line-height: 30px;
+  z-index: 11;
+}
+
+#username {
+  /*display: inline;*/
+  /*font-size: 14px;*/
+  color: white;
+  cursor: pointer;
 }
 
 .left-sidebar {
@@ -152,7 +191,6 @@ body {
   position: relative;
   width: 700px;
   padding: 75px 25px;
-  left: 230px;
 }
 
 .gallery {
@@ -166,6 +204,10 @@ body {
   width: 595px;
   height: 400px;
   float: right;
+}
+
+.hero-image {
+  width: 100%;
 }
 
 .thumbnail-row {
@@ -197,3 +239,80 @@ body {
   text-align: center;
 }
 
+.category {
+  box-sizing: border-box;
+  height: 200px;
+  width: 340px;
+  display: inline-block;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  /*padding: 10px;*/
+  position: relative;
+}
+
+.category-title {
+  color: white;
+  font-size: 18px;
+  /*margin: 10px;*/
+  text-align: center;
+  /*vertical-align: middle;*/
+  width: 100%;
+  line-height: 200px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.category-title:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+  cursor: pointer;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+/*.category-overlay {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  opacity: 0.1;
+  position: absolute;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.category-overlay:hover {
+  opacity: 0.5;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+*/
+footer {
+  box-sizing: border-box;
+  width: 100%;
+  /*height: 100px;*/
+  position: relative;
+  /*bottom: 0px;*/
+  background-color: rgba(0, 0, 0, 0.10);
+  padding: 10px;
+  text-align: center;
+}
+
+.footer-link {
+  margin: 0px 10px;
+}
