--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,17 @@ body {
   left: 230px;
 }
 
+.clearfix {
+  overflow: auto;
+  zoom: 1; 
+}
+
+*:hover {
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
 /* Imported fonts */
 @font-face {
   font-family: 'Klinic Slab Medium';
@@ -62,6 +73,21 @@ body {
 
 
 /* 2. Divs */
+.button {
+  display: inline-block;
+  position: relative;
+  /*margin: 0px 5px 0px 0px;*/
+  padding: 0px 15px;
+  line-height: 30px;
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
 #navbar {
   width: 100%;
   padding: 10px 0px;
@@ -73,79 +99,167 @@ body {
 #logo {
   display: inline-block;
   float: left;
-  margin: 0px 10px;
+  margin: 0px 20px;
   color: #ffffff;
-  line-height: 30px;
+  line-height: 34px;
   font-family: 'Klinic Slab Medium', 'Georgia', serif;
   font-size: 20px;
 }
 
-#search-field {
+#search {
   display: inline-block;
-  margin: 0px 0px 0px 10px;
+  position: relative;
+}
+
+#select-category-button {
+  position: relative;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.10);
+  height: 100%;
+  line-height: 32px;
+  /*z-index: 12;*/
+  color: white;
+  background-color: rgba(255, 255, 255, 0.2);
+
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+#select-category-dropdown {
+  position: absolute;
+  display: block;
+  top: 5px;
+  /*vertical-align: center;*/
+  /*line-height: 32px;*/
+  left: 0;
+  /*height: 32px;*/
+  width: auto;
+  font-family: arial,sans-serif;
+  outline: 0;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  cursor: pointer;
+  opacity: 0;
+  /*opacity: 1;*/
+  filter: alpha(opacity=0);
+  visibility: visible;
+}
+
+#search-field {
+  position: relative;
+  display: inline-block;
+  left: -5px;
+  /*margin-left: 10px;*/
   padding: 0px 10px;
-  border-radius: 5px;
+  /*border-radius: 5px;*/
   border-style: none;
-  line-height: 30px;
+  line-height: 32px;
   width: 300px;
 
-  border-top-left-radius: 5px;
+/*  border-top-left-radius: 5px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 5px;
-
+*/
   font-family: inherit;
   font-size: inherit;
 }
 
 #search-button {
-  display: inline-block;
-  position: relative;
+  /*display: inline-block;
+  position: relative;*/
   margin: 0px 5px 0px 0px;
-  padding: 0px 15px;
-  line-height: 30px;
-  left: -5px;
+  /*padding: 0px 15px;
+  line-height: 30px;*/
+  left: -10px;
+  top: -1px;
   /*padding: 0px 10px;*/
   background-color: #320f41; /* FIX THIS COLOR */
-  color: white;
-  border: 0px;
+  /*color: white;
+  border: 0px;*/
+  border-bottom: 2px solid #13081B;
+
   border-top-right-radius: 5px;
   border-top-left-radius: 0px;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 0px;
 
-  -webkit-transition: 0.5s;
+/*  -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
-
+*/
   font-family: inherit;
   font-size: inherit;
 }
 
 #search-button:hover {
-  background-color: #5f1669;
+  background-color: #4A006C;
   cursor: pointer;
 
-  -webkit-transition: 0.5s;
+/*  -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
-}
+*/}
 
 #account-info {
   display: inline-block;
-  position: absolute;
-  /*float: right;*/
-  right: 0px;
+  position: relative;
+  float: right;
+  /*right: 0px;*/
   margin-right: 10px;
   line-height: 30px;
-  z-index: 11;
+  /*z-index: 11;*/
+}
+
+#post-button {
+  background-color: #FDC041;
+  border-bottom: 2px solid #D8A23A;
+  float: left;
+  margin: 0px 20px;
+  cursor: pointer;
+}
+
+#post-button:hover {
+  background-color: #FBCD6B;
+/*
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;*/
+}
+
+#user-photo {
+  /*display: inline-block;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  overflow: hidden;
+  border: 2px #cccccc;
+  margin: 0px 5px;*/
+
+  width: 30px;
+  height: 30px;
+  float: left;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.25);
+  display: inline-block;
+  /*margin-top: 9px;*/
+  overflow: hidden;
 }
 
 #username {
-  /*display: inline;*/
-  /*font-size: 14px;*/
+  /*display: inline;
+  line-height: 30px;
+  font-size: 14px;
   color: white;
   cursor: pointer;
+  /*float: right;*/
+
+  color: white;
+  float: left;
+  font-size: 13px;
+  line-height: 30px;
+  margin-left: 5px;
 }
 
 .left-sidebar {
@@ -189,8 +303,10 @@ body {
 
 .main-content {
   position: relative;
-  width: 700px;
-  padding: 75px 25px;
+  /*width: 700px;*/
+  /*width: calc(100% - 460px);*/
+  width: 780px;
+  padding-top: 75px;
 }
 
 .gallery {
@@ -207,7 +323,25 @@ body {
 }
 
 .hero-image {
+  /*width: 100%;*/
+  height: 400px;
+  margin-bottom: 10px;
+}
+
+.hero-image-description {
+  position: absolute;
+  bottom: 0px;
+  padding: 30px;
+  padding-top: 40px;
+  font-size: 24px;
+  color: white;
+  box-sizing: border-box;
   width: 100%;
+  height: 100px;
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.45) 70%, rgba(0, 0, 0, 0.8)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.45) 70%, rgba(0, 0, 0, 0.8)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.45) 70%, rgba(0, 0, 0, 0.8)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.45) 70%, rgba(0, 0, 0, 0.8)); /* Standard syntax */
 }
 
 .thumbnail-row {
@@ -242,7 +376,8 @@ body {
 .category {
   box-sizing: border-box;
   height: 200px;
-  width: 340px;
+  /*width: 340px;*/
+  width: calc(50% - 10px);
   display: inline-block;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.1);
@@ -253,7 +388,7 @@ body {
 
 .category-title {
   color: white;
-  font-size: 18px;
+  font-size: 24px;
   /*margin: 10px;*/
   text-align: center;
   /*vertical-align: middle;*/
@@ -271,13 +406,13 @@ body {
 }
 
 .category-title:hover {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
 
-  -webkit-transition: 0.2s;
+/*  -webkit-transition: 0.2s;
   -o-transition: 0.2s;
   transition: 0.2s;
-}
+*/}
 
 /*.category-overlay {
   position: absolute;
@@ -310,9 +445,56 @@ footer {
   /*bottom: 0px;*/
   background-color: rgba(0, 0, 0, 0.10);
   padding: 10px;
-  text-align: center;
+  text-align: left;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 5px 0px;
+}
+
+li {
+  margin: 0px;
+}
+
+.footer-column-title {
+  /*font-size: ;*/
+  font-weight: bold;
 }
 
 .footer-link {
-  margin: 0px 10px;
+  display: block;
+  /*margin: 0px 10px;*/
+  line-height: 1.5;
+  /*float: left;*/
+  font-size: 12px;
+  text-decoration: none;
 }
+
+.footer-table {
+  width: 100%;
+  /*max-width: 60%;*/
+  margin: 0 auto;
+}
+
+.footer-column {
+  width: 20%;
+  /*position: relative;*/
+  vertical-align: top;
+  /*display: inline-block;*/
+  /*float: left;*/
+}
+
+.footer-column-spacer {
+  width: 10%;
+}
+
+
+
+
+
+
+
+
+
