--- a/assets/css/index-style.css
+++ b/assets/css/index-style.css
@@ -60,6 +60,21 @@ body {
   transition: 0.2s;
 }
 
+.button {
+  display: inline-block;
+  position: relative;
+  /*margin: 0px 5px 0px 0px;*/
+  padding: 0px 15px;
+  line-height: 30px;
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
 /* Imported fonts */
 @font-face {
   font-family: 'Klinic Slab Medium';
@@ -73,15 +88,50 @@ body {
 
 
 /* 2. Divs */
-.button {
-  display: inline-block;
+.splash-container {
+  width: 100%;
+  height: 100vh;
   position: relative;
-  /*margin: 0px 5px 0px 0px;*/
-  padding: 0px 15px;
-  line-height: 30px;
+  overflow: hidden;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.splash {
+  width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.splash-text-container {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 80px;
   color: white;
-  border: 0px;
-  border-radius: 5px;
+}
+
+.splash-title {
+  font-size: 84px;
+}
+
+.splash-subtitle {
+  font-size: 48px;
+  font-weight: 300;
+}
+
+.overlay {
+  /*margin: 10px;*/
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  background-color: rgba(0, 0, 0, 0.2);
 
   -webkit-transition: 0.2s;
   -o-transition: 0.2s;
@@ -132,8 +182,8 @@ body {
   /*width: 700px;*/
   /*width: calc(100% - 460px);*/
   width: 780px;
-  margin: 0 auto;
-  padding-top: 75px;
+  margin: 40px auto 20px;
+  /*padding-top: 75px;*/
 }
 
 .gallery {
@@ -217,24 +267,11 @@ body {
   position: relative;
 }
 
-.category-overlay {
-  /*margin: 10px;*/
+.category .overlay {
   text-align: center;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  padding-top: 50px;
-
-  background-color: rgba(0, 0, 0, 0.2);
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
 }
 
-.category-overlay:hover {
+.category .overlay:hover {
   background-color: rgba(0, 0, 0, 0.5);
   cursor: pointer;
 }
@@ -243,64 +280,12 @@ body {
   text-align: center;
   color: white;
   font-size: 24px;
+  margin-top: 50px;
 }
 
 .category-icon {
   height: 60px;
   display: inline-block;
-  margin: 15px;
+  margin: 15px auto;
 }
-
-footer {
-  box-sizing: border-box;
-  width: 100%;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.10);
-  padding: 10px;
-  text-align: left;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 5px 0px;
-}
-
-li {
-  margin: 0px;
-}
-
-.footer-column-title {
-  font-weight: bold;
-}
-
-.footer-link {
-  display: block;
-  line-height: 1.5;
-  font-size: 12px;
-  text-decoration: none;
-}
-
-.footer-table {
-  width: 100%;
-  /*max-width: 60%;*/
-  margin: 0 auto;
-}
-
-.footer-column {
-  width: 20%;
-  vertical-align: top;
-}
-
-.footer-column-spacer {
-  width: 10%;
-}
-
-
-
-
-
-
-
-
 
