--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,16 @@
 /*
 TABLE OF CONTENTS
 ------------------
-1. Basics, layout
-2. Divs
-2. Fonts
-3. Colors
+  Basics
+  Fonts
+  Nav Bar
+  Main Page
+  Item Page
+  List Page
+  Footer
 */
 
-/* 1. Basics, layout */
-
-#logo a {
-  color: #fff;
-  text-decoration: none;
-}
-
+/* BASICS */
 body {
   padding: 0px;
   margin: 0px;
@@ -40,14 +37,12 @@ body {
 .left {
   position: relative;
   float: left;
-  /*margin: 10px 10px 10px 0px;*/
   margin: 10px 0px;
 }
 
 .right {
   position: relative;
   float: right;
-  /*margin: 10px 0px 10px 10px;*/
   margin: 10px 0px;
 }
 
@@ -55,7 +50,39 @@ body {
   left: 220px;
 }
 
-/* Imported fonts */
+.clearfix {
+  overflow: auto;
+  zoom: 1; 
+}
+
+*:hover {
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.button {
+  display: inline-block;
+  position: relative;
+  /*margin: 0px 5px 0px 0px;*/
+  padding: 0px 15px;
+  line-height: 30px;
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+a {
+  color: inherit;
+}
+
+
+
+/* FONTS */
 @font-face {
   font-family: 'Klinic Slab Medium';
   src: url(../fonts/KlinicSlabMedium.otf);
@@ -72,7 +99,250 @@ body {
 }
 
 
-/* 2. Divs */
+
+/* NAV BAR */
+#logo a {
+  text-decoration: none;
+}
+
+.button {
+  display: inline-block;
+  position: relative;
+  padding: 0px 15px;
+  line-height: 30px;
+  color: white;
+  border: 0px;
+  border-radius: 5px;
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+#navbar {
+  width: 100%;
+  padding: 10px 0px;
+  position: fixed;
+  background: #8a7595;
+  z-index: 10;
+}
+
+#logo {
+  display: inline-block;
+  float: left;
+  margin: 0px 20px;
+  color: #ffffff;
+  line-height: 34px;
+  font-family: 'Klinic Slab Medium', 'Georgia', serif;
+  font-size: 20px;
+}
+
+#search {
+  display: inline-block;
+  position: relative;
+}
+
+#select-category-button {
+  position: relative;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.10);
+  height: 100%;
+  line-height: 32px;
+  color: white;
+  background-color: rgba(255, 255, 255, 0.2);
+
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+
+#select-category-dropdown {
+  position: absolute;
+  display: block;
+  top: 5px;
+  left: 0;
+  width: auto;
+  font-family: arial,sans-serif;
+  outline: 0;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  cursor: pointer;
+  opacity: 0;
+  /*opacity: 1;*/
+  filter: alpha(opacity=0);
+  visibility: visible;
+}
+
+#search-field {
+  position: relative;
+  display: inline-block;
+  left: -5px;
+  padding: 0px 10px;
+  border-style: none;
+  line-height: 32px;
+  width: 300px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#search-button {
+  margin: 0px 5px 0px 0px;
+  left: -10px;
+  top: -1px;
+  background-color: #320f41;
+  border-bottom: 2px solid #13081B;
+  border-top-right-radius: 5px;
+  border-top-left-radius: 0px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 0px;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+#search-button:hover {
+  background-color: #4A006C;
+  cursor: pointer;
+}
+
+#account-info {
+  display: inline-block;
+  position: relative;
+  float: right;
+  margin-right: 10px;
+  line-height: 30px;
+}
+
+#post-button {
+  background-color: #FDC041;
+  border-bottom: 2px solid #D8A23A;
+  float: left;
+  margin: 0px 20px;
+  cursor: pointer;
+}
+
+#post-button:hover {
+  background-color: #FBCD6B;
+}
+
+#user-photo {
+  width: 30px;
+  height: 30px;
+  float: left;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.25);
+  display: inline-block;
+  overflow: hidden;
+}
+
+#username {
+  color: white;
+  float: left;
+  font-size: 13px;
+  line-height: 30px;
+  margin-left: 5px;
+}
+
+
+
+/* MAIN PAGE */
+.splash-container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.splash {
+  width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.splash-text-container {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 80px;
+  color: white;
+}
+
+.splash-title {
+  font-size: 84px;
+}
+
+.splash-subtitle {
+  font-size: 48px;
+  font-weight: 300;
+}
+
+.overlay {
+  /*margin: 10px;*/
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.main-page-content {
+  position: relative;
+  width: 780px;
+  margin: 50px auto;
+}
+
+.categories {
+  margin: 20px 0px 10px;
+}
+
+.category {
+  box-sizing: border-box;
+  height: 200px;
+  /*width: 340px;*/
+  width: calc(50% - 10px);
+  display: inline-block;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  /*padding: 10px;*/
+  position: relative;
+}
+
+.category .overlay {
+  text-align: center;
+}
+
+.category .overlay:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+
+.category-title {
+  text-align: center;
+  color: white;
+  font-size: 24px;
+  margin-top: 50px;
+}
+
+.category-icon {
+  height: 60px;
+  display: inline-block;
+  margin: 15px auto;
+}
+
+
+
+/* ITEM PAGE */
 .left-sidebar {
   position: fixed; 
   padding: 100px 10px 100px 10px;
@@ -87,27 +357,6 @@ body {
   display: block;
 }
 
-/*#name {
-  position: fixed;
-  width: 30px;
-  height: 30px;
-  margin-left: 15px;
-}
-
-#phone {
-  position: fixed;
-  width: 30px;
-  height: 30px;
-  margin-left: 15px;
-}
-
-#email{
-  position: fixed;
-  width: 30px;
-  height: 30px;
-  margin-left: 15px;
-}
-*/
 .social-media {
   margin-top: -15px;
   font-family: 'Socialico Plus';
@@ -256,7 +505,6 @@ body {
 }
 
 .main-image {
-/*  position: absolute;*/
   display: block;
   width: 780px;
   height: 400px;
@@ -279,26 +527,13 @@ body {
   background: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.45) 70%, rgba(0, 0, 0, 0.8)); /* Standard syntax */
 }
 
-.hero-image {
-  width: 100%;
-}
-
 .title {
   width: calc(90%)px;
   position: absolute;
-  z-index: 400;
   color: white;
   left: 20px;
   top: 330px;
 }
-
-/*.thumbnail-row {
-  display: block;
-  height: 120px;
-  margin-top: 10px;
-  overflow-y: hidden;
-  overflow-x: scroll;
-}*/
 
 .thumbnail-row-horizontal {
   /*display: inline-block; */
@@ -355,85 +590,62 @@ body {
   cursor: pointer;
 }
 
-
 #next {
   margin-left: 580px;
 }
 
-.category {
-  box-sizing: border-box;
-  height: 200px;
-  width: 340px;
-  display: inline-block;
-  border-radius: 5px;
-  background-color: rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  /*padding: 10px;*/
-  position: relative;
-}
 
-.category-title {
-  color: white;
-  font-size: 18px;
-  /*margin: 10px;*/
-  text-align: center;
-  /*vertical-align: middle;*/
-  width: 100%;
-  line-height: 200px;
-  position: absolute;
-  top: 0px;
-  left: 0px;
 
-  background-color: rgba(0, 0, 0, 0.2);
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.category-title:hover {
-  background-color: rgba(0, 0, 0, 0.6);
-  cursor: pointer;
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-/*.category-overlay {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  background-color: black;
-  opacity: 0.1;
-  position: absolute;
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.category-overlay:hover {
-  opacity: 0.5;
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-*/
+/* FOOTER */
 footer {
   box-sizing: border-box;
-  width: 100%;
-  /*height: 100px;*/
+  min-width: 780px;
   position: relative;
-  /*bottom: 0px;*/
   background-color: rgba(0, 0, 0, 0.10);
   padding: 10px;
+  font-size: 12px;
+}
+
+footer ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 5px 0px;
+}
+
+footer li {
+  margin: 0px;
+}
+
+footer p {
   text-align: center;
+  margin-top: 0px;
+}
+
+.footer-column-title {
+  font-weight: bold;
+  color: #775F84;
 }
 
 .footer-link {
-  margin: 0px 10px;
+  display: block;
+  line-height: 1.5;
+  text-decoration: none;
 }
+
+.footer-table {
+  width: 100%;
+  /*max-width: 60%;*/
+  margin: 0 auto;
+}
+
+.footer-column {
+  width: 20%;
+  vertical-align: top;
+}
+
+.footer-column-spacer {
+  width: 10%;
+}
+
+
+
