--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,238 +10,6 @@ TABLE OF CONTENTS
   Footer
 */
 
-/* BASICS */
-body {
-  padding: 0px;
-  margin: 0px;
-}
-
-.clear {
-  clear: both;
-}
-
-.img-scaled-w {
-  width: 100%;
-}
-
-.img-scaled-h {
-  height: 100%;
-}
-
-.img-scaled-wh {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.left {
-  position: relative;
-  float: left;
-  margin: 10px 0px;
-}
-
-.right {
-  position: relative;
-  float: right;
-  margin: 10px 0px;
-}
-
-.left-offset {
-  left: 220px;
-}
-
-.clearfix {
-  overflow: auto;
-  zoom: 1; 
-}
-
-*:hover {
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-.button {
-  display: inline-block;
-  position: relative;
-  /*margin: 0px 5px 0px 0px;*/
-  padding: 0px 15px;
-  line-height: 30px;
-  color: white;
-  border: 0px;
-  border-radius: 5px;
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-a {
-  color: inherit;
-}
-
-
-
-/* FONTS */
-@font-face {
-  font-family: 'Klinic Slab Medium';
-  src: url(../fonts/KlinicSlabMedium.otf);
-}
-
-@font-face {
-  font-family: 'Socialico Plus';
-  src: url(../fonts/SocialicoPlus.otf);
-}
-
-body {
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-}
-
-
-
-/* NAV BAR */
-#logo a {
-  text-decoration: none;
-}
-
-.button {
-  display: inline-block;
-  position: relative;
-  padding: 0px 15px;
-  line-height: 30px;
-  color: white;
-  border: 0px;
-  border-radius: 5px;
-
-  -webkit-transition: 0.2s;
-  -o-transition: 0.2s;
-  transition: 0.2s;
-}
-
-#navbar {
-  width: 100%;
-  padding: 10px 0px;
-  position: fixed;
-  background: #8a7595;
-  z-index: 10;
-}
-
-#logo {
-  display: inline-block;
-  float: left;
-  margin: 0px 20px;
-  color: #ffffff;
-  line-height: 34px;
-  font-family: 'Klinic Slab Medium', 'Georgia', serif;
-  font-size: 20px;
-}
-
-#search {
-  display: inline-block;
-  position: relative;
-}
-
-#select-category-button {
-  position: relative;
-  display: inline-block;
-  background-color: rgba(0, 0, 0, 0.10);
-  height: 100%;
-  line-height: 32px;
-  color: white;
-  background-color: rgba(255, 255, 255, 0.2);
-
-  border-top-right-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
-
-#select-category-dropdown {
-  position: absolute;
-  display: block;
-  top: 5px;
-  left: 0;
-  width: auto;
-  font-family: arial,sans-serif;
-  outline: 0;
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  cursor: pointer;
-  opacity: 0;
-  /*opacity: 1;*/
-  filter: alpha(opacity=0);
-  visibility: visible;
-}
-
-#search-field {
-  position: relative;
-  display: inline-block;
-  left: -5px;
-  padding: 0px 10px;
-  border-style: none;
-  line-height: 32px;
-  width: 300px;
-  font-family: inherit;
-  font-size: inherit;
-}
-
-#search-button {
-  margin: 0px 5px 0px 0px;
-  left: -10px;
-  top: -1px;
-  background-color: #320f41;
-  border-bottom: 2px solid #13081B;
-  border-top-right-radius: 5px;
-  border-top-left-radius: 0px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 0px;
-  font-family: inherit;
-  font-size: inherit;
-}
-
-#search-button:hover {
-  background-color: #4A006C;
-  cursor: pointer;
-}
-
-#account-info {
-  display: inline-block;
-  position: relative;
-  float: right;
-  margin-right: 10px;
-  line-height: 30px;
-}
-
-#post-button {
-  background-color: #FDC041;
-  border-bottom: 2px solid #D8A23A;
-  float: left;
-  margin: 0px 20px;
-  cursor: pointer;
-}
-
-#post-button:hover {
-  background-color: #FBCD6B;
-}
-
-#user-photo {
-  width: 30px;
-  height: 30px;
-  float: left;
-  border-radius: 50%;
-  border: 2px solid rgba(255, 255, 255, 0.25);
-  display: inline-block;
-  overflow: hidden;
-}
-
-#username {
-  color: white;
-  float: left;
-  font-size: 13px;
-  line-height: 30px;
-  margin-left: 5px;
-}
-
 
 
 /* MAIN PAGE */
@@ -250,6 +18,7 @@ body {
   height: 100vh;
   position: relative;
   overflow: hidden;
+  border-bottom: 20px solid #8a7595;
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
@@ -269,6 +38,21 @@ body {
   transform: translateY(-50%);
   padding: 80px;
   color: white;
+}
+
+.css-typing {
+  width: 30em;
+  white-space: nowrap;
+  -webkit-animation: type 5s steps(50, end);
+  animation: type 5s steps(50, end);
+}
+
+@keyframes type {
+  from { width: 0; }
+}
+
+@-webkit-keyframes type {
+  from { width: 0; }
 }
 
 .splash-title {
@@ -592,59 +376,6 @@ body {
 
 #next {
   margin-left: 580px;
-}
-
-
-
-/* FOOTER */
-footer {
-  box-sizing: border-box;
-  min-width: 780px;
-  position: relative;
-  background-color: rgba(0, 0, 0, 0.10);
-  padding: 10px;
-  font-size: 12px;
-}
-
-footer ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 5px 0px;
-}
-
-footer li {
-  margin: 0px;
-}
-
-footer p {
-  text-align: center;
-  margin-top: 0px;
-}
-
-.footer-column-title {
-  font-weight: bold;
-  color: #775F84;
-}
-
-.footer-link {
-  display: block;
-  line-height: 1.5;
-  text-decoration: none;
-}
-
-.footer-table {
-  width: 100%;
-  /*max-width: 60%;*/
-  margin: 0 auto;
-}
-
-.footer-column {
-  width: 20%;
-  vertical-align: top;
-}
-
-.footer-column-spacer {
-  width: 10%;
 }
 
 
